--- a/frontend/tempaltes/home.html
+++ b/frontend/tempaltes/home.html
@@ -22,7 +22,7 @@
 <body>
 	<div class="cd-intro-block">
         <div id="video-landing">
-            <video autoplay preload loop id="video_bg" class="video-js vjs-default-skin" width="100%" height="100%" poster="http://video-js.zencoder.com/oceans-clip.png"   data-setup=''>
+            <video preload loop id="video_bg" muted class="video-js vjs-default-skin" width="100%" height="100%" poster="http://video-js.zencoder.com/oceans-clip.png"   data-setup=''>
                 <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />
                 <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4' />
                 <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' />
@@ -35,10 +35,10 @@
             
             <div id="social-media">
                 <ul>
-                    <li class="social-icon fb"><i class="fa icon-facebook"></i></li>
-                    <li class="social-icon tw"><i class="fa icon-twitter"></i></li>
-                    <li class="social-icon vk"><i class="fa icon-vkontakte"></i></li>
-                    <li class="social-icon github"><i class="fa icon-github"></i></li>
+                    <li class="social-icon fb"><a href=""><i class="fa icon-facebook"></i></a></li>
+                    <li class="social-icon tw"><a href=""><i class="fa icon-twitter"></i></a></li>
+                    <li class="social-icon vk"><a href=""><i class="fa icon-vkontakte"></i></a></li>
+                    <li class="social-icon github"><a href=""><i class="fa icon-github"></i></a></li>
                 </ul>
             </div>
 		</div>
